2003-10-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSServicesManager.m: Tidy last patch to match use of
	whitespace etc in GNUstep code.

2003-10-26 15:18  Alexander Malmberg <alexander@malmberg.org>
		  Matt Rice <ratmice@yahoo.com>

	* Source/NSFontManager.m (-availableFonts, -availableFontFamilies,
	availableMembersOfFontFamily:): Don't check delegate; always return
	all fonts.
	(-_includeFont:): Move...

	* Source/NSFontPanel.m (_includeFont:delegate:): Here.
	(-_familySelectionChanged:, reloadDefaultFontFamilies): Use that
	method to check with the delegate which fonts should be included in
	the font panel.
	(-_doPreview, -_fontForSelection:): Check that the face list isn't
	empty before accessing it.
	(-_getOriginalSize): Move to the Private category to match the
	@interface.

2003-10-25 16:52  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibTemplates.m: initWithFrame is not supposed to be called
	on subclasses of NSControl as the designated initializer according to
	docs.  Removed the call.
	* Source/GSNibCompatibility.[hm]: Added in the old templates for 
	compatibility ONLY.  This is so any of the older .gorms which use 
	these templates can be loaded and used normally.
	* Source/NSOutlineView.m: Corrected a documentation issue.
	
2003-10-25 12:53  Matt Rice <ratmice@yahoo.com>

	* Source/NSWorkspace.m (-_connectApplication:): Ignore the path to
	the application when extracting the port name. (Committed by
	Alexander Malmberg.)

2003-10-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSWorkspace.m: Change a few uses of '/' in strings to
	use stringByAppendingPatchComponent:
	* Tools/gopen.m: Fix to pass the full path of the file to the
	app being used to open it, so relative paths in the arguments
	work properly.

2003-10-21  Bjorn Giesler <bjoern@giesler.de>

	* Source/GSServicesManager.m: Fix NSPerformService() to work for
	any localised service name.

2003-10-21  Richard Frith-Macdonald <rfm@gnu.org>
