@@ -2,6 +2,10 @@
 
 	* Source/GSServicesManager.m: Tidy last patch to match use of
 	whitespace etc in GNUstep code.
+	* Source/GSDisplayManager.m:
+	(-getEventMatchingMask:beforeDate:inMode:dequeue:) fix incorrect
+	termination ... should terminate when limit date has passed,
+	irrespective of the state of any input sources.
 
 2003-10-26 15:18  Alexander Malmberg <alexander@malmberg.org>
 		  Matt Rice <ratmice@yahoo.com>
